# crm-argon

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
configs/: crm_argon.mplstyle  model_config.toml  run_optimization.toml  run_simulation.toml
data_preparation/: data_processing.py
data_preparation/processed/: einstein_parameters.csv  excitation_allowed.csv  excitation_parity_forbidden.csv  excitation_spin_forbidden.csv  metastable_quenching.csv  photoionization.csv
data_preparation/raw/Katsonis/: katsonis_photoionization.csv
data_preparation/raw/Kimura/: inter_state_allowed.csv  inter_state_forbidden.csv  kimura_einstein.csv  kimura_parameters.csv
data_preparation/raw/Kurucz/: transition_probabilities.csv
data_preparation/raw/NIST/: nist_argon_raw.csv  nist_argon_raw_old.csv
data_preparation/raw/Tachibana/: constants_metastables.csv
data_preparation/raw/Vlcek/: inter_state_spin_forbidden.csv  levels_and_params.csv  photoionization.csv
src/crm_argon/: __init__.py  __main__.py  constants.py  crossSections.py  database.py  diagnostics.py  eedf.py  exporter.py  interface.py  kinetics.py  physicsEngine.py  plotter.py  solver.py  spectrum.py
src/crm_argon/data/: ionization.csv
