[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crm-argon"
version = "1.0.0"
authors = [
  { name="Peter Preisler" },
]
description = "Argon Collisional-Radiative (CR) Model Package"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tomli",
]

[project.urls]
"Homepage" = "https://github.com/peterplr/crm-argon"

[project.scripts]
crm-argon = "crm_argon.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crm_argon = ["data/*.csv"]
